--- a/LootHistory2/Views/Home/Index.cshtml
+++ b/LootHistory2/Views/Home/Index.cshtml
@@ -1,3 +1,26 @@
-﻿@{
-    ViewBag.Title = "Home Page";
+﻿
+@{
+    ViewBag.Title = "<Untamed>";
 }
+@model LootHistory2.Models.LootList
+
+<h1>Loot</h1>
+<table id="loot-table" class="table table-striped table-bordered">
+    <thead>
+        <tr>
+            <th>Name</th>
+            <th>Item</th>
+            <th>Boss</th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var item in Model.Loots)
+        {
+            <tr>
+                <td class="@item.Class">@item.PlayerName</td>
+                <td><a class="item-link" href="@item.ItemUrl">@item.Item</a></td>
+                <td>@item.Boss</td>
+            </tr>
+        }
+    </tbody>
+</table>
